AC_PREREQ(2.59)
AC_COPYRIGHT([Copyright (c) 2013 Weongyo Jeong <weongyo@gmail.com>])
AC_INIT([eel], [1.0.0], [weongyo@gmail.com])
AM_INIT_AUTOMAKE([foreign])
AM_CONFIG_HEADER(config.h)
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_MAKE_SET
AC_CONFIG_FILES([
    Makefile
    src/Makefile
])
AC_OUTPUT
